<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.example.numbersgame.domain.entity.GameResult"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#934aa7"
        tools:context=".presentation.GameFinishedFragment">
        <ImageView
            android:id="@+id/result_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:resultEmoji="@{gameResult.win}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@drawable/pass" />

        <TextView
            android:id="@+id/required_answers_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/required_score"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@id/score_answers_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_img"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/score_answers_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score_answers"
            app:score="@{gameResult.countOfRightAnswers}"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/required_percentage_textView"
            app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
            app:layout_constraintStart_toStartOf="@id/required_answers_textView"
            app:layout_constraintTop_toBottomOf="@id/required_answers_textView"
            />

        <TextView
            android:id="@+id/required_percentage_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/required_percentage"
            android:textSize="20sp"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentsOfRightAnswers}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/score_percentage_textView"
            app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
            app:layout_constraintStart_toStartOf="@id/required_answers_textView"
            app:layout_constraintTop_toBottomOf="@id/score_answers_textView"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <TextView
            android:id="@+id/score_percentage_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/score_percentage"
            android:textSize="20sp"
            app:scorePercentage="@{gameResult}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
            app:layout_constraintStart_toStartOf="@id/required_answers_textView"
            app:layout_constraintTop_toBottomOf="@id/required_percentage_textView"
            />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffd70b"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/retry"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_percentage_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
